[package]
name = "git-gr"
version = "0.1.0"
edition = "2021"
authors = ["Rebecca Turner <rbt@sent.as>"]
description = "A Gerrit CLI"
repository = "https://github.com/9999years/git-gr"
license = "MIT"
keywords = ["git", "gerrit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.5.1"
clap_mangen = { version = "0.2.20", optional = true }
command-error = { version = "0.4.0", features = [ "tracing" ] }
fs-err = "2.11.0"
itertools = "0.12.1"
miette = { version = "7.2.0", default-features = false, features = ["fancy-no-backtrace"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shell-words = "1.1.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-human-layer = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
utf8-command = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[package.metadata.release]
# Don't tag commits
tag = false
# Don't do `git push`
push = false
# Don't do `cargo publish`
publish = false
